# rush

./: Cargo.toml  README.md  shell.nix  syntax.deg
src/: env.rs  executor.rs  main.rs  nativeFunctions.rs  parser.rs
src/parser/: ast.rs  exec.rs  mod.rs  tokens.rs  vars.rs
test/: base_if.rush  builtins.rush  if.rush  if_else.rush  parsetest.rush  simple.rush  var.rush  while.rush
